Revert "Fix double scrollbars (#450)" (#455)
This reverts commit df2aff7cd6365aba2b802a388c23dbb75bed1bdf.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,7 +18,3 @@
 .table-col-m {
   width: 20rem;
 }
-
-html {
-  background-color: rgb(243 244 246);
-}
